tests/ui-stable/transmute-ref-dst-not-nocell.stderr
error[E0277]: the trait bound `Dst: Immutable` is not satisfied
  --> tests/ui-stable/transmute-ref-dst-not-nocell.rs:21:33
   |
21 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 unsatisfied trait bound
   |                                 required by a bound introduced by this call
   |
help: the trait `Immutable` is not implemented for `Dst`
  --> tests/ui-stable/transmute-ref-dst-not-nocell.rs:18:1
   |
18 | struct Dst(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `Dst`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `AssertDstIsImmutable`
  --> tests/ui-stable/transmute-ref-dst-not-nocell.rs:21:33
   |
21 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
